--- a/invoice/pom.xml
+++ b/invoice/pom.xml
@@ -76,6 +76,10 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>3.17</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.opennlp</groupId>
+			<artifactId>opennlp-tools</artifactId>
+			<version>1.9.2</version>
+		</dependency>
 	</dependencies>
 </project>
