--- a/invoice/pom.xml
+++ b/invoice/pom.xml
@@ -123,5 +123,11 @@
 			<artifactId>dl4j-spark_2.11</artifactId>
 			<version>1.0.0-beta2_spark_2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.deeplearning4j/pydatavec -->
+		<dependency>
+			<groupId>org.deeplearning4j</groupId>
+			<artifactId>pydatavec</artifactId>
+			<version>1.0.0-beta6</version>
+		</dependency>
 	</dependencies>
 </project>
